# tpm

./: LICENSE  Makefile  Makefile-debug.msc  Makefile.am  Makefile.msc  README.md  TODO  cfg_parse.c  configure.ac  getopt.h  manifest.json  pick.sql  toothpastes-enhanced.sample  toothpastes.sample  tpm-tests.mk  tpm-ubuntu.mk  tpm-wasm.mk  tpm.1  tpm.c  tpm.conf.sample  tpm.h  tpm.rc  tpm.wxs
.github/workflows/: brush.yml  release.yml  version.yml
backend/: db.sql  gui.tcl  install.tcl  login.tcl  make_install_win.bat  test_driver.tcl
frontend/: main.tsx
locale/: tpm.pot
locale/de/: tpm.po
locale/de/LC_MESSAGES/: tpm.mo
locale/es/: tpm.po
locale/es/LC_MESSAGES/: tpm.mo
locale/fr/: fr.po  tpm.po
locale/fr/LC_MESSAGES/: tpm.mo
locale/it/: tpm.po
locale/it/LC_MESSAGES/: tpm.mo
locale/ja/: tpm.po
locale/ru/: tpm.po
locale/ru/LC_MESSAGES/: tpm.mo
locale/zh/: tpm.po
locale/zh/LC_MESSAGES/: tpm.mo
locale/zh_CN/: tpm.po
src/: Makefile.am  cfg_parse.c  getopt.c  prng64_xrp32.c  prng64_xrp32.h  tpm.c  tpm.h
tests/: Makefile.am  bad_toothpastes.csv  tpm_battery  tpm_battery.c
